--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
@@ -46,6 +46,7 @@
             jq('#partner-hiv-status select').prop("disabled", true);
             jq('#partner-tested select').change(onPartnerTestedChange);
             // HIV Test validation
+            jq('#tbl-known-positive').hide();
             jq("#hiv-test2").hide();
             jq('#hiv-final-result select').attr("style", "pointer-events:none;");
             jq("#hiv-test1-result select").change(firstTestSelected);
@@ -54,6 +55,8 @@
             jq("#expiry-date input").change(expiryDateSelected);
             //Validation for client if already hiv positive or enrolled
             if(PATIENT_IS_REPORTED_HIV == 703 || PATIENT_IS_ENROLLED_HIV){
+                jq('#tbl-known-positive').show();
+                jq('#hiv-known-positive:text').val('Positive');
                 jq('#tbl-hiv-test').hide();
                 jq('#art-and-prophylaxis').show();
                 jq('#who-staging').show();
@@ -451,6 +454,22 @@
 						<table align="center" width="100%" class="tb1">
 							<tr>
 								<td>
+									<table id="tbl-known-positive" border="1">
+										<tr>
+											<td>
+												<u>
+													HIV Test Recorded Recently
+												</u>
+												<br/>
+												<br/>Final results:
+												<input type="text" name="hiv-known-status" id="hiv-known-positive" readonly="True" />
+												&#160;&#160;&#160;&#160;
+												Date:
+												<lookup expression="fn.latestObs(159427).getObsDatetime()"/>
+												<br/>
+											</td>
+										</tr>
+									</table>
 									<table id="tbl-hiv-test">
 										<obsgroup groupingConceptId="164410AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 											<tr>
