--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -48,8 +48,9 @@
         getField('parity-abortion.value').change(onParityChange);
         jq('#gravida input[type=text]').attr("style", "pointer-events:none;");
 		onLmpChange();
+        validateOtherFields();
 		onPatientHivStatusChange();
-		onPartnerHivStatusChange()
+		onPartnerHivStatusChange();
 		getField('lmp.value').change(onLmpChange);
 		getField('patient-hiv-status.value').change(onPatientHivStatusChange);
 		getField('partner-hiv-status.value').change(onPartnerHivStatusChange);
@@ -180,10 +181,19 @@
 	}
 
 	function validateOtherFields() {
+
+        var menarche = getValue('menarche-age.value');
 		var urinePh = getValue('urine-ph.value');
 		var urineSpecificGravity = getValue('urine-specific-gravity.value');
 		var ultrasoundEdd = getValue('ultrasound-edd.value');
 
+        if (menarche != null) {
+            var menarcheValue = parseFloat(menarche);
+            if (menarcheValue &lt; 5.0 || menarcheValue &gt; 9.0) {
+                getField('menarche-age.error').html('Menarche must be between 8 and 18 years.').show();
+                return false;
+            }
+        }
 		if (urinePh != null) {
 			var urinePhValue = parseFloat(urinePh);
 			if (urinePhValue &lt; 5.0 || urinePhValue &gt; 9.0) {
@@ -316,7 +326,7 @@
 			<tr>
 				<td width="250">Age at Menarche:</td>
 				<td>
-					<obs conceptId="160598AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="false"/>
+					<obs conceptId="160598AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="menarche-age" required="false"/>
 				</td>
 				<td width="250">Blood Group/Rhesus:</td>
 				<td>
