updated needsAntibodytest calculation,NeedsPCRTestcalculation,nottakenpcrconfirmationcalculation,mchcEnrollment

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -114,7 +114,7 @@
             if (facility_confirmed != null) {
                 getField('facility-confirmed.value').val(facility_confirmed);
             }
-            //TODO: Consider validation fro pmtct
+            //TODO: Consider validation for pmtct
             //Not all ART regimens have answers
             //jq('#pmtctChecked input').click(onPmtctSelected);
             //jq('#pepChecked input').click(onPepSelected);
