validated HEI if mother is exposed, validated child prophylaxis and mother arv for HEI, added weight in kgs - default

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsDelivery.html
@@ -421,7 +421,7 @@
 									 answerConceptIds="1534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1535AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 									 answerLabels="Male,Female"/>
 							</td>
-							<td>Birth weight (grams) :</td>
+							<td>Birth weight (kg) :</td>
 							<td>
 								<obs conceptId="5916AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 							</td>
