--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -479,11 +479,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td colspan="2">Height</td>
+							<td colspan="2">Height: (cm)</td>
 							<td>
 								<obs conceptId="5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="height"/>
 							</td>
-							<td>Weight</td>
+							<td>Weight: (kg)</td>
 							<td>
 								<obs conceptId="5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="weight"/>
 							</td>
