added Haemoglbin test in antenatal visit form

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -881,6 +881,10 @@
 									<td>
 										<obs conceptId="32AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
 									</td>
+									<td>Haemoglobin:</td>
+									<td>
+										<obs conceptId="21AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"></obs>
+									</td>
 								</tr>
 							</table>
 						</td>
