--- a/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchcs/mchcsFollowupVisit.html
@@ -210,10 +210,17 @@
 									<td>(h)</td>
 									<td>(i)</td>
 								</tr>
-
 								<tr>
 									<td><encounterDate id="encounter-date" showTime="true" /><br /><br />
-									Revisit this year? <obs conceptId="164142AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" />									</td>
+									Revisit this year? <obs conceptId="164142AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Yes,No" />
+										<br /><br />
+										Primary care give ?
+										<obs
+												id="primary-caregiver" conceptId="160640AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown"
+												answerConceptIds="970AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,973AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,972AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160639AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+												answerLabels="Mother,Grandparent,Sibling,Guardian,Other"
+										/>
+									</td>
 									<td><div id="age" class="value"></div></td>
 									<td>  <obs conceptId="160908AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="160909AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160910AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,127778AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Green,Yellow,Red" answerSeparator="&lt;br/&gt;" /></td>
 									<td><obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio" answerConceptIds="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1595AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Exclusive Breastfeeding(EBF),Exclusive Replacement(ERF),Mixed Feeding(MF)" answerSeparator="&lt;br/&gt;" /><br /><br />
