--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsEnrollment.html
@@ -162,7 +162,7 @@
 		}
 
 		var hivStatus = getValue('patient-hiv-status.value');
-		if (hivStatus != NOT_HIV_TESTED_ID || hivStatus != "") {
+		if (hivStatus != NOT_HIV_TESTED_ID ) {
 			var hivTestDate = getValue('patient-hiv-test-date.value');
 			if (hivTestDate == "" &amp;&amp; HIV_TEST_DATE == "") {
 				getField('patient-hiv-test-date.error').html('Specify the date when the patient was tested for HIV.').show();
@@ -226,7 +226,7 @@
 	function onPatientHivStatusChange() {
 		var patientHivStatus = getValue('patient-hiv-status.value');
 
-		if (patientHivStatus == '' || patientHivStatus == NOT_HIV_TESTED_ID) {
+		if (patientHivStatus == NOT_HIV_TESTED_ID) {
 			jq('#patient-hiv-test-date input').prop('disabled', true);
 			setValue('patient-hiv-test-date.value', null);
 		} else {
@@ -373,7 +373,7 @@
 									<obs conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" required="true"
 										 id="patient-hiv-status"
 										 answerConceptIds="703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1402AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										 answerLabels="HIV Positive,HIV Negative,Not Tested"/>
+										 answerLabels="HIV Positive,HIV Negative,Unknown/Not Tested"/>
 									<div id="patient-hiv-status-mismatch" class="ke-warning">Patient is enrolled in HIV program</div>
 								</td>
 								<td width="250">HIV Test Date:</td>
